--- a/views/register.html
+++ b/views/register.html
@@ -49,7 +49,7 @@
     </header>
 
     <div class="button-container">
-        <img src="../img/graphics/profile_icon.svg" alt="Mail Icon" class="mail_icon">
+        <button id="profile_pictureUpload"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="User Icon" class="profile_picUploadImg"></button>
         <h1 class="login_text">Registrieren</h1>
 
         <div id="register_input">
