--- a/views/register.html
+++ b/views/register.html
@@ -49,7 +49,8 @@
     </header>
 
     <div class="button-container">
-        <button id="profile_pictureUpload"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="User Icon" class="profile_picUploadImg"></button>
+        <input type="file" id="profile_pictureUpload" accept="image/*">
+        <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="User Icon" class="profile_picUploadImg"></button>
         <h1 class="login_text">Registrieren</h1>
 
         <div id="register_input">
