--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -48,7 +48,8 @@
 
     <main>
         <div id="profile_picture">
-            <button id="profile_pictureUpload"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg"></button>
+            <input type="file" id="profile_pictureUpload" accept="image/*">
+            <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg"></button>
         </div>
         <!-- TODO: @y-neck Add functionality to retrieve or update profile picture -->
         <div id="editProfile_inputs">
