--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
-    <title>Profil</title>
+    <title>Profil bearbeiten</title>
     <!--Tab title-->
     <meta name="description" content="Bearbeite dein Profil">
     <!--Description of web page-->
@@ -48,8 +48,8 @@
 
     <main>
         <div id="profile_picture">
-            <input type="file" id="profile_pictureUpload" accept="image/*">
-            <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg"></button>
+            <input type="file" id="profile_pictureUpload" accept="image/*"> <!-- Image upload -->
+            <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg">
         </div>
         <!-- TODO: @y-neck Add functionality to retrieve or update profile picture -->
         <div id="editProfile_inputs">
