add avatar class

--- a/views/header.html
+++ b/views/header.html
@@ -41,13 +41,14 @@
     <script src="../script.js"></script>
 
 </head>
+
 <body>
-    
 
-<header>
-    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
-    <a href="../views/profile.html">
-        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
-</header>
+    <header>
+        <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+        <a href="../views/profile.html">
+            <img id="profile_icon" class="avatar" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+
+    </header>
 </body>
