--- a/views/about.html
+++ b/views/about.html
@@ -47,7 +47,7 @@
 <header>
     <a href="../index.html"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
     <a href="../views/profile.html">
-        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+        <img id="profile_icon" class="avatar" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
 </header>
 <div class="about">
@@ -67,5 +67,9 @@
     <a href="../views/about.html" target="_blank">About</a>
     <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
 </footer>
+
+    <!-- Import mainUser.js -->
+    <script src="../mainUser.js" type="module"></script>
+
 </body>
 </html>
