--- a/views/datenschutz.html
+++ b/views/datenschutz.html
@@ -41,30 +41,40 @@
     <script src="../script.js"></script>
 
 </head>
+
 <body>
-    
 
-<header>
-    <a href="../index.html"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
-    <a href="../views/profile.html">
-        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
-</header>
-<div class="datenschutz">
-    <h1 class="text_title">Datenschutz</h1>
-    <p>Unsere Verarbeitung personenbezogener Daten unserer Nutzer beschränkt sich auf jene Daten, die zur Bereitstellung einer
-    funktionsfähigen Internetseite sowie unserer Inhalte und Leistungen erforderlich sind. Die Verarbeitung
-    personenbezogener Daten unserer Nutzer erfolgt nur zu den unten aufgeführten Zwecken und wenn eine rechtliche Grundlage
-    (im Sinn der DSGVO) vorliegt. Es werden nur solche personenbezogenen Daten erhoben, die für die Durchführung und
-    Abwicklung unserer Aufgaben und Leistungen tatsächlich erforderlich sind oder die du uns freiwillig zur Verfügung
-    gestellt hast.</p>
-</div>
+    <header>
+        <a href="../index.html"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+        <a href="../views/profile.html">
+            <img id="profile_icon" class="avatar" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
-<footer>
-    <a href="../views/impressum.html" target="_blank">Impressum</a>
-    <a href="../views/rules.html" target="_blank">Regeln</a>
-    <a href="../views/about.html" target="_blank">About</a>
-    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
-</footer>
+    </header>
+    <div class="datenschutz">
+        <h1 class="text_title">Datenschutz</h1>
+        <p>Unsere Verarbeitung personenbezogener Daten unserer Nutzer beschränkt sich auf jene Daten, die zur
+            Bereitstellung einer
+            funktionsfähigen Internetseite sowie unserer Inhalte und Leistungen erforderlich sind. Die Verarbeitung
+            personenbezogener Daten unserer Nutzer erfolgt nur zu den unten aufgeführten Zwecken und wenn eine
+            rechtliche Grundlage
+            (im Sinn der DSGVO) vorliegt. Es werden nur solche personenbezogenen Daten erhoben, die für die Durchführung
+            und
+            Abwicklung unserer Aufgaben und Leistungen tatsächlich erforderlich sind oder die du uns freiwillig zur
+            Verfügung
+            gestellt hast.</p>
+    </div>
+
+    <footer>
+        <a href="../views/impressum.html" target="_blank">Impressum</a>
+        <a href="../views/rules.html" target="_blank">Regeln</a>
+        <a href="../views/about.html" target="_blank">About</a>
+        <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
+    </footer>
+
+    <!-- Import mainUser.js -->
+    <script src="../mainUser.js" type="module"></script>
+
 </body>
+
 </html>
