--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ label {
 }
 
 .avatar {
-border-radius: 50%;
+  border-radius: 50%;
 }
 
 #profile_username {
@@ -320,7 +320,6 @@ border-radius: 50%;
 #editProfile_inputs {
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
   margin-bottom: 40px;
   place-items: center;
   display: flex;
@@ -408,6 +407,7 @@ border-radius: 50%;
   width: 120px;
   height: 120px;
   margin-top: 35px;
+  margin-bottom: 26px;
   filter: invert(43%) sepia(93%) saturate(337%) hue-rotate(141deg) brightness(97%) contrast(78%)
 }
 
@@ -415,10 +415,6 @@ border-radius: 50%;
   .profile_picUploadImg {
     filter: invert(80%) sepia(19%) saturate(981%) hue-rotate(140deg) brightness(82%) contrast(91%);
   }
-}
-
-.login_text {
-  margin: 8px;
 }
 
 #login_input {
