--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --text: #000000;
+    --text-inverted: #ffffff;
     --background: #c4eff3;
     --primary: #3692a1;
     --secondary: #ffffff;
@@ -21,6 +22,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --text: #ffffff;
+    --text-inverted: #000000;
     --background: #0c373b;
     --primary: #5ebbc9;
     --secondary: #000000;
@@ -200,6 +202,12 @@ footer a {
   padding: 15px 25px;
   cursor: pointer;
   border-radius: 8px;
+}
+
+@media (prefers-color-scheme: dark) {
+  #checkbox label {
+    color: var(--text-inverted, black)
+  }
 }
 
 #congrats {
