--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -47,13 +47,16 @@
     </header>
 
     <main>
+        <h1 style="display: none;">Profil bearbeiten</h1>
         <div id="editProfile_inputs">
-                <input type="file" id="profile_pictureUpload" accept="image/*"> <!-- Image upload -->
-                <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg">
+            <label for="profile_pictureUpload">Profilbild hochladen</label>
+            <input type="file" id="profile_pictureUpload" accept="image/*"> <!-- Image upload -->
+            <img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg">
 
-
-            <input class="editProfile_input" type="text" id="editUsername" placeholder="Neuer Benutzername"
+            <label for="editUsername">Benutzernamen ändern</label>
+            <input class=" editProfile_input" type="text" id="editUsername" placeholder="Neuer Benutzername"
                 autocomplete="off">
+            <label for="editPassword">Passwort ändern</label>
             <input class="editProfile_input" type="password" id="editPassword" placeholder="Neues Passwort"
                 autocomplete="off">
             <button id="deleteProfile">Profil löschen</button>
