--- a/views/register.html
+++ b/views/register.html
@@ -49,8 +49,9 @@
     </header>
 
     <div class="button-container">
+        <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg"
+                alt="User Icon" class="profile_picUploadImg"></label>
         <input type="file" id="profile_pictureUpload" accept="image/*">
-        <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="User Icon" class="profile_picUploadImg"></button>
         <h1 class="login_text">Registrieren</h1>
 
         <div id="register_input">
@@ -66,12 +67,12 @@
 
     </div>
 
-<footer>
-    <a href="../views/impressum.html" target="_blank">Impressum</a>
-    <a href="../views/rules.html" target="_blank">Regeln</a>
-    <a href="../views/about.html" target="_blank">About</a>
-    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
-</footer>
+    <footer>
+        <a href="../views/impressum.html" target="_blank">Impressum</a>
+        <a href="../views/rules.html" target="_blank">Regeln</a>
+        <a href="../views/about.html" target="_blank">About</a>
+        <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
+    </footer>
 
 
     <!-- Import supabase -->
