fixed upload button

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -49,9 +49,8 @@
     <main>
         <h1 style="display: none;">Profil bearbeiten</h1>
         <div id="editProfile_inputs">
-            <label for="profile_pictureUpload">Profilbild hochladen</label>
+            <label for="profile_pictureUpload" id="upload_Button"> <img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg"> </label>
             <input type="file" id="profile_pictureUpload" accept="image/*"> <!-- Image upload -->
-            <img src="../img/graphics/circle-arrow-up-solid.svg" alt="Profilbild" class="profile_picUploadImg">
 
             <label for="editUsername">Benutzernamen ändern</label>
             <input class=" editProfile_input" type="text" id="editUsername" placeholder="Neuer Benutzername"
