--- a/views/register.html
+++ b/views/register.html
@@ -49,8 +49,7 @@
     </header>
 
     <div class="button-container">
-        <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg"
-                alt="User Icon" class="profile_picUploadImg"></label>
+        <label for="profile_pictureUpload" id="upload_Button"><img src="../img/graphics/circle-arrow-up-solid.svg" alt="User Icon" class="profile_picUploadImg"></label>
         <input type="file" id="profile_pictureUpload" accept="image/*">
         <h1 class="login_text">Registrieren</h1>
 
